Fix dark mode regression and NavItemImage positioning

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -144,6 +144,15 @@ p {
 }
 
 @media (prefers-color-scheme: dark) {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    color: var(--colorLinenDefault);
+  }
+
   p {
     color: inherit;
   }
